<resources>
    <string name="app_name">Location Reminders</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved !</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="add_reminder_button">add reminder</string>
    <string name="login_cancelled_message">Login operation cancelled</string>
    <string name="add_a_reminder">Add a reminder</string>
    <string name="location_permission_dialog_title">Permission required</string>
    <string name="location_permission_dialog_positive_button">Grant</string>
    <string name="location_permission_dialog_negative_button">Exit</string>
    <string name="enable_location">Enable location</string>
    <string name="request_location_dialogue_message">To perform your request, please enable location services with all the time option.</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="dialogue_grant_precise_location">Please grant the precise location permission so you get precise results and reminders</string>
    <string name="dialogue_grant_location_permission">Please grant the required location permission so you benefit from the app</string>
    <string name="location_label">Location:\u0020</string>
    <string name="title_label">Title:\u0020</string>
    <string name="description_label">Description:\u0020</string>

    <!-- Error strings -->
    <string name="err_adding_geofence">Error happened, Can\'t Add Geofence, please try again!</string>
    <string name="err_removing_geofences">Error happened, Can\'t Remove Geofences, please try again!</string>
    <string name="default_error_message">Sorry, something wrong happened</string>
    <string name="operation_cancelled">operation cancelled!</string>
    <string name="error_happened">Error happened</string>
    <string name="error_enter_title">Please enter title</string>
    <string name="error_select_location">Please select location</string>

    <!-- Geofence error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_insufficient_location_permission">The client does not have sufficient location permission to perform geofencing operations.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_request_too_frequent">Your app has been adding Geofences too frequently.</string>
    <string name="triggering_geofences_is_null">triggeringGeofences is null</string>
    <string name="geofence_transition_enter_is_not_received" formatted="true">Geofence GEOFENCE_TRANSITION_ENTER is not received what received is .%d</string>
    <string name="clear_list">Clear list</string>
    <string name="delete">delete</string>

</resources>
